syntax="proto3";

package users;

option go_package="./proto/users";

message User {
    string UserID = 1;
    string Name = 2;
    int32 Batch = 3;
    string Email = 4;
    string Password = 5;
}

message GetUserRequest {
    int64 ID = 1;
}

message GetUserResponse {
    User user = 1;
}

service TodoService {
    rpc GetUser(GetUserRequest) returns(GetUserResponse) {}
}